# backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
conf/: settings.py  urls.py
core/: hooks.py  mixins.py  renderers.py
courses/: admin.py  enums.py  filters.py  models.py  serializers.py  urls.py  views.py
courses/migrations/: 0001_initial.py
quizzes/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
quizzes/migrations/: 0001_initial.py
users/: authentication.py  filters.py  models.py  serializers.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_managers.py
